chore(deps-dev): relaxed version range on Serenity/JS dev dependencies
because Lerna doesn't seem to handle versioning in non-releasable packages

--- a/examples/protractor-jasmine-todomvc/package.json
+++ b/examples/protractor-jasmine-todomvc/package.json
@@ -35,14 +35,14 @@
     "npm": "^6 || ^7 || ^8 || ^9"
   },
   "devDependencies": {
-    "@serenity-js/assertions": "3.0.1",
-    "@serenity-js/console-reporter": "3.0.1",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/jasmine": "3.0.1",
-    "@serenity-js/protractor": "3.0.1",
-    "@serenity-js/rest": "3.0.1",
-    "@serenity-js/web": "3.0.1",
-    "@serenity-js/serenity-bdd": "3.0.1",
+    "@serenity-js/assertions": "^3.0.0",
+    "@serenity-js/console-reporter": "^3.0.0",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/jasmine": "^3.0.0",
+    "@serenity-js/protractor": "^3.0.0",
+    "@serenity-js/rest": "^3.0.0",
+    "@serenity-js/web": "^3.0.0",
+    "@serenity-js/serenity-bdd": "^3.0.0",
     "@types/chai": "^4.3.4",
     "@types/jasmine": "^3.10.7",
     "jasmine": "^3.99.0",
