--- a/examples/webdriverio-cucumber/package.json
+++ b/examples/webdriverio-cucumber/package.json
@@ -34,11 +34,11 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^9.1.0",
-    "@serenity-js/console-reporter": "3.0.1",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/cucumber": "3.0.1",
-    "@serenity-js/webdriverio": "3.0.1",
-    "@serenity-js/serenity-bdd": "3.0.1",
+    "@serenity-js/console-reporter": "^3.0.0",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/cucumber": "^3.0.0",
+    "@serenity-js/webdriverio": "^3.0.0",
+    "@serenity-js/serenity-bdd": "^3.0.0",
     "@wdio/cli": "^7.30.2",
     "@wdio/local-runner": "^7.30.2",
     "@wdio/spec-reporter": "^7.30.2",
