--- a/integration/protractor-web/package.json
+++ b/integration/protractor-web/package.json
@@ -40,12 +40,12 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@integration/web-specs": "3.0.0",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/console-reporter": "3.0.1",
-    "@serenity-js/mocha": "3.0.1",
-    "@serenity-js/protractor": "3.0.1",
-    "@serenity-js/serenity-bdd": "3.0.1",
-    "@serenity-js/web": "3.0.1",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/console-reporter": "^3.0.0",
+    "@serenity-js/mocha": "^3.0.0",
+    "@serenity-js/protractor": "^3.0.0",
+    "@serenity-js/serenity-bdd": "^3.0.0",
+    "@serenity-js/web": "^3.0.0",
     "@types/mocha": "^10.0.1",
     "chromedriver": "^111.0.0",
     "cross-env": "^7.0.3",
