--- a/integration/webdriverio-cucumber/package.json
+++ b/integration/webdriverio-cucumber/package.json
@@ -31,9 +31,9 @@
   "dependencies": {
     "@cucumber/cucumber": "^9.1.0",
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/cucumber": "3.0.1",
-    "@serenity-js/webdriverio": "3.0.1",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/cucumber": "^3.0.0",
+    "@serenity-js/webdriverio": "^3.0.0",
     "@wdio/cli": "^7.30.2",
     "@wdio/local-runner": "^7.30.2",
     "@wdio/cucumber-framework": "^7.30.2",
