--- a/integration/cucumber-1/package.json
+++ b/integration/cucumber-1/package.json
@@ -31,8 +31,8 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@integration/cucumber-specs": "3.0.0",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/cucumber": "3.0.1",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/cucumber": "^3.0.0",
     "@types/mocha": "^10.0.1",
     "@types/chai": "^4.3.4",
     "cucumber": "1.3.3",
