--- a/integration/cucumber-specs/package.json
+++ b/integration/cucumber-specs/package.json
@@ -31,8 +31,8 @@
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/cucumber": "3.0.1",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/cucumber": "^3.0.0",
     "@types/mocha": "^10.0.1",
     "@types/chai": "^4.3.4",
     "mocha": "^10.2.0",
