--- a/integration/jasmine/package.json
+++ b/integration/jasmine/package.json
@@ -30,9 +30,9 @@
   },
   "dependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "3.0.1",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/jasmine": "3.0.1",
+    "@serenity-js/assertions": "^3.0.0",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/jasmine": "^3.0.0",
     "jasmine": "^3.99.0"
   },
   "devDependencies": {
