--- a/integration/protractor-jasmine/package.json
+++ b/integration/protractor-jasmine/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/jasmine": "3.0.1",
-    "@serenity-js/protractor": "3.0.1",
-    "@serenity-js/web": "3.0.1",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/jasmine": "^3.0.0",
+    "@serenity-js/protractor": "^3.0.0",
+    "@serenity-js/web": "^3.0.0",
     "jasmine": "^3.99.0",
     "protractor": "^7.0.0"
   },
