--- a/integration/webdriverio-jasmine/package.json
+++ b/integration/webdriverio-jasmine/package.json
@@ -30,9 +30,9 @@
   },
   "dependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/jasmine": "3.0.1",
-    "@serenity-js/webdriverio": "3.0.1",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/jasmine": "^3.0.0",
+    "@serenity-js/webdriverio": "^3.0.0",
     "@wdio/cli": "^7.30.2",
     "@wdio/local-runner": "^7.30.2",
     "@wdio/spec-reporter": "^7.30.2",
