--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -42,12 +42,12 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@integration/web-specs": "3.0.0",
-    "@serenity-js/console-reporter": "3.0.1",
-    "@serenity-js/core": "3.0.1",
-    "@serenity-js/mocha": "3.0.1",
-    "@serenity-js/serenity-bdd": "3.0.1",
-    "@serenity-js/webdriverio": "3.0.1",
-    "@serenity-js/web": "3.0.1",
+    "@serenity-js/console-reporter": "^3.0.0",
+    "@serenity-js/core": "^3.0.0",
+    "@serenity-js/mocha": "^3.0.0",
+    "@serenity-js/serenity-bdd": "^3.0.0",
+    "@serenity-js/webdriverio": "^3.0.0",
+    "@serenity-js/web": "^3.0.0",
     "@types/mocha": "^10.0.1",
     "@wdio/cli": "^7.30.2",
     "@wdio/local-runner": "^7.30.2",
