--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
+    "@serenity-js/assertions": "3.1.1",
     "@serenity-js/cucumber": "3.1.1",
     "@serenity-js/jasmine": "3.1.1",
     "@serenity-js/local-server": "3.1.1",
