--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -137,7 +137,8 @@ jobs:
       - lint
       - compile
     if: needs.detect-source-code-changes.outputs.has_changes == 'true'
-    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
+#    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@test/protractor-press-m2'
     with:
       modules: |
         [
@@ -297,8 +298,6 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           install-command: npm ci
-        env:
-          CHROMEDRIVER_FILEPATH: "/usr/bin/chromedriver"
 
       - name: Publish artifacts
         run: npm run lerna:publish
