--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -162,8 +162,7 @@ jobs:
       - lint
       - compile
     if: needs.detect-source-code-changes.outputs.has_changes == 'true'
-#    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
-    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@test/protractor-press-m2'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
     with:
       modules: |
         [
