--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -246,7 +246,10 @@ jobs:
           path-to-lcov: 'target/coverage/lcov.info'
 
       - name: CodeClimate
+        if: ${{ secrets.CC_TEST_REPORTER_ID }}
         uses: paambaati/codeclimate-action@ac3f177ece9928d220a8bd1c2f1957926fd3b67e # v3.2.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageLocations: |
             ${{github.workspace}}/target/coverage/lcov.info:lcov
