--- a/examples/webdriverio-cucumber/package.json
+++ b/examples/webdriverio-cucumber/package.json
@@ -39,13 +39,13 @@
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
-    "@wdio/cli": "^7.30.2",
-    "@wdio/local-runner": "^7.30.2",
-    "@wdio/spec-reporter": "^7.30.2",
-    "@wdio/types": "^7.30.2",
-    "@wdio/reporter": "^7.30.2",
+    "@wdio/cli": "7.30.2",
+    "@wdio/local-runner": "7.30.2",
+    "@wdio/spec-reporter": "7.30.2",
+    "@wdio/types": "7.30.2",
+    "@wdio/reporter": "7.30.2",
     "npm-failsafe": "^1.0.0",
-    "webdriverio": "^7.30.2",
+    "webdriverio": "7.30.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
