--- a/examples/webdriverio-jasmine/package.json
+++ b/examples/webdriverio-jasmine/package.json
@@ -38,15 +38,15 @@
     "@serenity-js/jasmine": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
-    "@wdio/cli": "^7.30.2",
-    "@wdio/local-runner": "^7.30.2",
-    "@wdio/jasmine-framework": "^7.30.2",
-    "@wdio/spec-reporter": "^7.30.2",
-    "@wdio/reporter": "^7.30.2",
+    "@wdio/cli": "7.30.2",
+    "@wdio/local-runner": "7.30.2",
+    "@wdio/jasmine-framework": "7.30.2",
+    "@wdio/spec-reporter": "7.30.2",
+    "@wdio/reporter": "7.30.2",
     "@types/jasmine": "^3.10.7",
     "jasmine": "^3.99.0",
     "npm-failsafe": "^1.0.0",
-    "webdriverio": "^7.30.2",
+    "webdriverio": "7.30.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
