--- a/integration/webdriverio-cucumber/package.json
+++ b/integration/webdriverio-cucumber/package.json
@@ -34,12 +34,12 @@
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
-    "@wdio/cli": "^7.30.2",
-    "@wdio/local-runner": "^7.30.2",
-    "@wdio/cucumber-framework": "^7.30.2",
-    "@wdio/reporter": "^7.30.2",
-    "@wdio/spec-reporter": "^7.30.2",
-    "webdriverio": "^7.30.2"
+    "@wdio/cli": "7.30.2",
+    "@wdio/local-runner": "7.30.2",
+    "@wdio/cucumber-framework": "7.30.2",
+    "@wdio/reporter": "7.30.2",
+    "@wdio/spec-reporter": "7.30.2",
+    "webdriverio": "7.30.2"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
