--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -49,8 +49,8 @@
   "dependencies": {
     "@serenity-js/core": "3.1.3",
     "@serenity-js/web": "3.1.3",
-    "@wdio/reporter": "^7.30.2",
-    "@wdio/types": "^7.30.2",
+    "@wdio/reporter": "7.30.2",
+    "@wdio/types": "7.30.2",
     "deepmerge": "^4.3.1",
     "tiny-types": "^1.19.1"
   },
@@ -58,8 +58,8 @@
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/jasmine": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
-    "@wdio/cli": "^7.30.2",
-    "webdriverio": "^7.30.2"
+    "@wdio/cli": "7.30.2",
+    "webdriverio": "7.30.2"
   },
   "peerDependenciesMeta": {
     "@serenity-js/cucumber": {
@@ -75,12 +75,12 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@types/mocha": "^10.0.1",
-    "@wdio/cli": "^7.30.2",
-    "@wdio/devtools-service": "^7.30.2",
-    "@wdio/dot-reporter": "^7.30.2",
-    "@wdio/local-runner": "^7.30.2",
-    "@wdio/mocha-framework": "^7.30.2",
-    "@wdio/spec-reporter": "^7.30.2",
+    "@wdio/cli": "7.30.2",
+    "@wdio/devtools-service": "7.30.2",
+    "@wdio/dot-reporter": "7.30.2",
+    "@wdio/local-runner": "7.30.2",
+    "@wdio/mocha-framework": "7.30.2",
+    "@wdio/spec-reporter": "7.30.2",
     "axios": "^1.3.5",
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
@@ -89,7 +89,7 @@
     "nyc": "15.1.0",
     "puppeteer-core": "^19.9.0",
     "start-server-and-test": "^2.0.0",
-    "webdriverio": "^7.30.2"
+    "webdriverio": "7.30.2"
   },
   "nyc": {
     "include": [
