--- a/integration/cucumber-9/package.json
+++ b/integration/cucumber-9/package.json
@@ -25,8 +25,7 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8 || ^9"
+    "node": "^16.13 || ^18.12 || ^20"
   },
   "devDependencies": {
     "@cucumber/cucumber": "^9.1.0",
