--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/istanbul-lib-coverage": "^2.0.4",
-    "@types/node": "^16.18.24",
+    "@types/node": "^18.16.0",
     "@types/sinon": "^10.0.14",
     "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -132,7 +132,6 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^14 || ^16 || ^18",
-    "npm": "^6 || ^7 || ^8 || ^9"
+    "node": "^16.13 || ^18.12 || ^20"
   }
 }
