feat(webdriverio): converted the module to ESM to support migration to WebdriverIO 8

--- a/integration/webdriverio-cucumber/package.json
+++ b/integration/webdriverio-cucumber/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "clean": "rimraf target",
-    "test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'"
+    "~test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
+    "test": "mocha --config .mocharc.yml 'spec/**/*.spec.*'"
   },
   "repository": {
     "type": "git",
