feat(webdriverio): support for WebdriverIO v8
Related tickets: #1493 #1541 #1673

--- a/packages/webdriverio/tsconfig.build.json
+++ b/packages/webdriverio/tsconfig.build.json
@@ -7,12 +7,10 @@
     "rootDir": "src",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "lib": [
       "es2021",
       "dom"
-    ],
-    "types": [
-      "webdriverio/async"
     ]
   },
   "include": [
