--- a/integration/webdriverio-cucumber/package.json
+++ b/integration/webdriverio-cucumber/package.json
@@ -15,8 +15,7 @@
   },
   "scripts": {
     "clean": "rimraf target",
-    "~test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
-    "test": "mocha --config .mocharc.yml 'spec/**/*.spec.*'"
+    "test": "c8 mocha --config .mocharc.yml 'spec/**/*.spec.*'"
   },
   "repository": {
     "type": "git",
@@ -34,11 +33,11 @@
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
-    "@wdio/cli": "7.31.1",
-    "@wdio/local-runner": "7.31.1",
-    "@wdio/reporter": "7.31.1",
-    "@wdio/spec-reporter": "7.31.1",
-    "webdriverio": "7.31.1"
+    "@wdio/cli": "8.8.7",
+    "@wdio/local-runner": "8.8.7",
+    "@wdio/reporter": "8.8.7",
+    "@wdio/spec-reporter": "8.8.7",
+    "webdriverio": "8.8.7"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
