--- a/integration/webdriverio-cucumber/tsconfig.json
+++ b/integration/webdriverio-cucumber/tsconfig.json
@@ -1,15 +1,19 @@
 {
-  "extends": "../../tsconfig.options.json",  
+  "extends": "../../tsconfig.options.json",
   "compilerOptions": {
-    "lib": ["es2021", "dom"],
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "lib": [
+      "es2021",
+      "dom"
+    ],
     "types": [
       "node",
-      "webdriverio/async",
-      "chai-as-promised"
+      "@wdio/globals/types"
     ]
   },
 
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
   ]
 }
