--- a/integration/webdriverio-mocha/examples/tsconfig.json
+++ b/integration/webdriverio-mocha/examples/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
-    "types": ["node", "webdriverio/async"]
+    "types": [
+      "node",
+      "@wdio/globals/types"
+    ]
   }
 }
