--- a/integration/webdriverio-mocha/package.json
+++ b/integration/webdriverio-mocha/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "clean": "rimraf target",
-    "test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'"
+    "test": "c8 mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'"
   },
   "repository": {
     "type": "git",
@@ -32,10 +32,11 @@
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
-    "@wdio/cli": "7.31.1",
-    "@wdio/local-runner": "7.31.1",
-    "@wdio/spec-reporter": "7.31.1",
-    "webdriverio": "7.31.1"
+    "@wdio/cli": "8.8.7",
+    "@wdio/globals": "8.8.7",
+    "@wdio/local-runner": "8.8.7",
+    "@wdio/spec-reporter": "8.8.7",
+    "webdriverio": "8.8.7"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
