--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -17,6 +17,7 @@
     "serenity-js",
     "internal"
   ],
+  "type": "module",
   "scripts": {
     "clean": "rimraf target",
     "test:devtools": "cross-env PROTOCOL=devtools npm test",
@@ -25,7 +26,7 @@
     "test": "cross-env PORT=8080 failsafe clean test:acceptance test:report",
     "test:acceptance": "start-server-and-test start 'http://localhost:8080' test:acceptance:run",
     "start": "npx web-specs-start",
-    "test:acceptance:run": "cross-env-shell nyc --report-dir=\"../integration/webdriverio-web/target/coverage/$PROTOCOL\" wdio wdio.conf.ts",
+    "test:acceptance:run": "cross-env-shell c8 --report-dir=\"../integration/webdriverio-web/target/coverage/$PROTOCOL\" wdio wdio.conf.ts",
     "test:report": "serenity-bdd run"
   },
   "repository": {
@@ -48,16 +49,17 @@
     "@serenity-js/webdriverio": "^3.0.0",
     "@serenity-js/web": "^3.0.0",
     "@types/mocha": "^10.0.1",
-    "@wdio/cli": "7.31.1",
-    "@wdio/local-runner": "7.31.1",
-    "@wdio/spec-reporter": "7.31.1",
+    "@wdio/cli": "8.8.7",
+    "@wdio/globals": "8.8.7",
+    "@wdio/local-runner": "8.8.7",
+    "@wdio/spec-reporter": "8.8.7",
     "chromedriver": "^112.0.0",
     "ci-info": "^3.8.0",
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
     "npm-failsafe": "^1.0.0",
-    "wdio-chromedriver-service": "7.3.2",
-    "webdriverio": "7.31.1",
+    "wdio-chromedriver-service": "8.1.1",
+    "webdriverio": "8.8.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
