--- a/integration/webdriverio-web/tsconfig.json
+++ b/integration/webdriverio-web/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "extends": "../../tsconfig.options.json",  
   "compilerOptions": {
-    "lib": ["es2021", "dom"],
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "lib": [
+      "es2021",
+      "dom"
+    ],
     "types": [
       "node",
-      "webdriverio/async",
-      "chai-as-promised"
+      "@wdio/globals/types"
     ]
   },
 
