--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -50,7 +50,8 @@
   "dependencies": {
     "@serenity-js/core": "3.1.6",
     "@serenity-js/web": "3.1.6",
-    "@wdio/reporter": "^7.31.1",
+    "@wdio/globals": "^8.8.7",
+    "@wdio/reporter": "^8.8.7",
     "@wdio/types": "^7.30.2",
     "deepmerge": "^4.3.1",
     "tiny-types": "^1.19.1"
@@ -59,8 +60,8 @@
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/jasmine": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
-    "@wdio/cli": "^7.31.1",
-    "webdriverio": "^7.31.1"
+    "@wdio/cli": "^8.8.7",
+    "webdriverio": "^8.8.7"
   },
   "peerDependenciesMeta": {
     "@serenity-js/cucumber": {
@@ -76,11 +77,11 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@types/mocha": "^10.0.1",
-    "@wdio/cli": "7.31.1",
-    "@wdio/devtools-service": "7.31.1",
-    "@wdio/dot-reporter": "7.31.1",
-    "@wdio/local-runner": "7.31.1",
-    "@wdio/spec-reporter": "7.31.1",
+    "@wdio/cli": "8.8.7",
+    "@wdio/devtools-service": "8.8.7",
+    "@wdio/dot-reporter": "8.8.7",
+    "@wdio/local-runner": "8.8.7",
+    "@wdio/spec-reporter": "8.8.7",
     "axios": "^1.3.5",
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
@@ -89,7 +90,7 @@
     "nyc": "15.1.0",
     "puppeteer-core": "^19.11.1",
     "start-server-and-test": "^2.0.0",
-    "webdriverio": "7.31.1"
+    "webdriverio": "8.8.7"
   },
   "nyc": {
     "include": [
