--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "istanbul-lib-coverage": "^3.2.0",
     "lerna": "^6.6.1",
     "mocha-testdata": "^1.2.0",
+    "nyc": "15.1.0",
     "playwright-core": "^1.32.3",
     "rimraf": "^5.0.0",
     "semver": "^7.4.0",
