--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -33,7 +33,8 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test": "c8 mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
+    "test": "c8 npm run test:no-coverage",
+    "test:no-coverage": "mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
