--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -32,7 +32,8 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test": "c8 mocha --config .mocharc.yml 'spec/adapter/**/*.spec.*'",
+    "test": "c8 npm run test:no-coverage",
+    "test:no-coverage": "mocha --config .mocharc.yml 'spec/adapter/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
