--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -27,7 +27,8 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test": "nyc mocha --config ../../.mocharc.yml --timeout 30000 'spec/**/*.spec.*'",
+    "test": "nyc npm run test:no-coverage",
+    "test:no-coverage": "mocha --config ../../.mocharc.yml --timeout 30000 'spec/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
