--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -29,7 +29,8 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
+    "test": "nyc npm run test:no-coverage",
+    "test:no-coverage": "mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
