--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -31,7 +31,8 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test": "nyc mocha --config ../../.mocharc.yml 'spec/adapter/**/*.spec.*'",
+    "test": "nyc npm run test:no-coverage",
+    "test:no-coverage": "mocha --config ../../.mocharc.yml 'spec/adapter/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
