ci(github): updated .gitignore files to remove rules around NYC
Related tickets: #1677

--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,11 @@ integration/*/package-lock.json
 packages/*/package-lock.json
 
 # Build Artifacts
-.nyc_output
 documentation/*/target/
 integration/*/target/
 integration-web/*/target/
 packages/*/target/
-packages/*/lib
+packages/*/lib/
 /target/
 *.log
 /out/
