ci(github): corrected code coverage reporter name

--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "integration-test:webdriverio-web-webdriver": "lerna run test:webdriver --stream --scope @integration/webdriverio-web",
     "site": "lerna run site --stream --scope '@documentation/*'",
     "report": "npm run coverage:merge && npm run coverage:report",
-    "coverage:merge": "bin/istanbul-merge.ts",
-    "coverage:report": "nyc report --reporter=html --reporter=lcovonly --temp-directory=./target/coverage --report-dir=./target/coverage",
+    "coverage:merge": "bin/coverage-merge.ts",
+    "coverage:report": "c8 report --reporter=html --reporter=lcov --temp-directory=./target/coverage/tmp --report-dir=./target/coverage",
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "commit": "bin/commit.ts",
     "lerna": "lerna",
