ci(github): corrected coverage report aggregation

--- a/.c8rc.json
+++ b/.c8rc.json
@@ -5,8 +5,7 @@
   "clean": true,
   "include": [
     "**/packages/*/src/**/*.ts",
-    "**/packages/*/lib/**/*.js",
-    "**/spec/**"
+    "**/packages/*/lib/**/*.js"
   ],
   "exclude": [
     "**/src/**/*.d.ts",
