--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -225,7 +225,7 @@ jobs:
 
     with:
       upload-artifact-name: 'aggregated-code-coverage'
-      upload-artifact-path: 'package.json "packages/*/target/coverage/coverage-final.json" "integration/*/target/coverage/coverage-final.json" "integration/*/target/coverage/*/coverage-final.json"'
+      upload-artifact-path: 'package.json "packages/*/target/coverage" "integration/*/target/coverage"'
 
   coverage-report:
     name: 'Coverage: report'
@@ -259,9 +259,6 @@ jobs:
 
       - name: Decompress code coverage reports
         run: '7z x -aoa aggregated-code-coverage-report.zip'
-
-      - name: Check LCOV report
-        run: ls -lah target/coverage/lcov.info
 
       - name: Coveralls
         uses: coverallsapp/github-action@f350da2c033043742f89e8c0b7b5145a1616da6d # v2.1.2
