fix(core): use "types" instead of "typings" in package.json files
"types" is the more modern way to specify the location of type definitions, see
https://www.typescriptlang.org/docs/handbook/declaration-files/publishing.html

Related tickets: #1682

--- a/packages/console-reporter/package.json
+++ b/packages/console-reporter/package.json
@@ -16,7 +16,7 @@
     "access": "public"
   },
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "types": "./lib/index.d.ts",
   "keywords": [
     "serenity-js",
     "tdd",
