--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -16,7 +16,7 @@
     "access": "public"
   },
   "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "types": "./lib/index.d.ts",
   "bin": {
     "serenity-bdd": "bin/serenity-bdd"
   },
