feat(webdriverio): support for WebdriverIO 8
To support WebdriverIO 8 and Node 18, @serenity-js/webdriverio is now a hybrid module providing both
CommonJS and EcmaScript Modules-compatible code. Since both WebdriverIO 8 and Serenity/JS support
CJS and ESM test suites, no code changes should be necessary to incorporate this upgrade.

Related tickets: #1541 #1682 webdriverio/webdriverio#10314

--- a/integration/webdriverio-mocha/.c8rc.json
+++ b/integration/webdriverio-mocha/.c8rc.json
@@ -4,9 +4,14 @@
   "allowExternal": true,
   "include": [
     "**/packages/core/src/**/*.ts",
+    "**/packages/core/lib/**/*.js",
     "**/packages/mocha/src/**/*.ts",
+    "**/packages/mocha/lib/**/*.js",
     "**/packages/web/src/**/*.ts",
-    "**/packages/webdriverio/src/**/*.ts"
+    "**/packages/web/lib/**/*.js",
+    "**/packages/webdriverio/src/**/*.ts",
+    "**/packages/webdriverio/lib/**/*.js",
+    "**/packages/webdriverio/esm/**/*.js"
   ],
   "exclude": [
     "**/target/**",
