--- a/integration/webdriverio-web/.c8rc.json
+++ b/integration/webdriverio-web/.c8rc.json
@@ -10,7 +10,8 @@
     "**/packages/web/src/**/*.ts",
     "**/packages/web/lib/**/*.js",
     "**/packages/webdriverio/src/**/*.ts",
-    "**/packages/webdriverio/lib/**/*.js"
+    "**/packages/webdriverio/lib/**/*.js",
+    "**/packages/webdriverio/esm/**/*.js"
   ],
   "exclude": [
     "**/target/**",
