--- a/integration/webdriverio-cucumber/.c8rc.json
+++ b/integration/webdriverio-cucumber/.c8rc.json
@@ -5,9 +5,14 @@
   "allowExternal": true,
   "include": [
     "**/packages/core/src/**/*.ts",
+    "**/packages/core/lib/**/*.js",
     "**/packages/cucumber/src/**/*.ts",
+    "**/packages/cucumber/lib/**/*.js",
     "**/packages/web/src/**/*.ts",
-    "**/packages/webdriverio/src/**/*.ts"
+    "**/packages/web/lib/**/*.js",
+    "**/packages/webdriverio/src/**/*.ts",
+    "**/packages/webdriverio/lib/**/*.js",
+    "**/packages/webdriverio/esm/**/*.js"
   ],
   "exclude": [
     "**/target/**",
