--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -15,8 +15,21 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "./build/cjs/index.js",
+  "type": "module",
+  "module": "./build/index.js",
+  "exports": {
+    ".": [
+      {
+        "types": "./esm/index.d.ts",
+        "import": "./esm/index.js",
+        "require": "./lib/api.js"
+      },
+      "./lib/index.js"
+    ],
+    "./package.json": "./package.json"
+  },
+  "types": "./lib/api.d.ts",
   "keywords": [
     "serenity-js",
     "ui",
@@ -32,8 +45,12 @@
   "scripts": {
     "clean": "rimraf target",
     "test": "c8 npm run test:no-coverage",
-    "test:no-coverage": "mocha --config ../../.mocharc.yml 'spec/adapter/**/*.spec.*'",
-    "compile": "rimraf lib && tsc --project tsconfig.build.json"
+    "test:no-coverage": "mocha --config .mocharc.yml 'spec/**/*.spec.*'",
+    "compile": "npm run compile:clean && npm run compile:esm && npm run compile:cjs && npm run compile:cjs-package",
+    "compile:clean": "rimraf lib esm",
+    "compile:esm": "tsc --project tsconfig-esm.build.json",
+    "compile:cjs": "tsc --project tsconfig-cjs.build.json",
+    "compile:cjs-package": "node -e \"require('fs').writeFileSync('lib/package.json', '{ \\\"type\\\": \\\"commonjs\\\" }')\""
   },
   "repository": {
     "type": "git",
@@ -49,8 +66,7 @@
   "dependencies": {
     "@serenity-js/core": "3.1.6",
     "@serenity-js/web": "3.1.6",
-    "@wdio/reporter": "^7.31.1",
-    "@wdio/types": "^7.30.2",
+    "@wdio/reporter": "^8.8.7",
     "deepmerge": "^4.3.1",
     "tiny-types": "^1.19.1"
   },
@@ -58,8 +74,8 @@
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/jasmine": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
-    "@wdio/cli": "^7.31.1",
-    "webdriverio": "^7.31.1"
+    "@wdio/cli": "^8.9.0",
+    "webdriverio": "^8.9.0"
   },
   "peerDependenciesMeta": {
     "@serenity-js/cucumber": {
@@ -75,19 +91,20 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@types/mocha": "^10.0.1",
-    "@wdio/cli": "7.31.1",
-    "@wdio/devtools-service": "7.31.1",
-    "@wdio/dot-reporter": "7.31.1",
-    "@wdio/local-runner": "7.31.1",
-    "@wdio/spec-reporter": "7.31.1",
+    "@wdio/cli": "8.9.0",
+    "@wdio/devtools-service": "8.9.0",
+    "@wdio/dot-reporter": "8.8.7",
+    "@wdio/local-runner": "8.9.0",
+    "@wdio/spec-reporter": "8.8.7",
+    "@wdio/types": "^8.8.7",
     "axios": "^1.3.5",
     "cross-env": "^7.0.3",
     "c8": "7.13.0",
     "mocha": "^10.2.0",
     "mocha-multi": "^1.1.7",
     "mocha-testdata": "^1.2.0",
-    "puppeteer-core": "^19.9.1",
+    "puppeteer-core": "^19.11.1",
     "start-server-and-test": "^2.0.0",
-    "webdriverio": "7.31.1"
+    "webdriverio": "8.9.0"
   }
 }
