--- a/packages/webdriverio/tsconfig-esm.build.json
+++ b/packages/webdriverio/tsconfig-esm.build.json
@@ -1,15 +1,16 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "outDir": "lib",
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "outDir": "esm",
     "rootDir": "src",
+    "target": "es2019",
     "lib": [
-      "es2019",
+      "es2021",
       "dom"
     ],
-    "types": [
-      "webdriverio/async"
-    ]
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*.ts"
