--- a/examples/webdriverio-mocha/tsconfig.json
+++ b/examples/webdriverio-mocha/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2019",
-    "lib": ["es2019"],
-    "module": "commonjs",
-    "sourceMap": true,
-    "declaration": true
+    "lib": ["es2019", "dom"],
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "types": [
+      "node",
+      "@wdio/globals/types"
+    ]
   },
 
   "exclude": [
