--- a/examples/webdriverio-mocha/package.json
+++ b/examples/webdriverio-mocha/package.json
@@ -37,14 +37,15 @@
     "@serenity-js/mocha": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
-    "@wdio/cli": "8.9.0",
-    "@wdio/local-runner": "8.9.0",
-    "@wdio/spec-reporter": "8.8.7",
-    "@wdio/reporter": "8.8.7",
+    "@wdio/cli": "8.10.0",
+    "@wdio/globals": "8.10.0",
+    "@wdio/local-runner": "8.10.0",
+    "@wdio/spec-reporter": "8.10.0",
+    "@wdio/reporter": "8.10.0",
     "@types/mocha": "^10.0.1",
     "mocha": "^10.2.0",
     "npm-failsafe": "^1.0.0",
-    "webdriverio": "8.9.0",
+    "webdriverio": "8.10.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
