--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -74,8 +74,8 @@
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/jasmine": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
-    "@wdio/cli": "^8.9.0",
-    "webdriverio": "^8.9.0"
+    "@wdio/cli": "^8.10.0",
+    "webdriverio": "^8.10.0"
   },
   "peerDependenciesMeta": {
     "@serenity-js/cucumber": {
@@ -91,12 +91,12 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@types/mocha": "^10.0.1",
-    "@wdio/cli": "8.9.0",
-    "@wdio/devtools-service": "8.9.0",
-    "@wdio/dot-reporter": "8.8.7",
-    "@wdio/local-runner": "8.9.0",
-    "@wdio/spec-reporter": "8.8.7",
-    "@wdio/types": "^8.8.7",
+    "@wdio/cli": "8.10.0",
+    "@wdio/devtools-service": "8.10.0",
+    "@wdio/dot-reporter": "8.10.0",
+    "@wdio/local-runner": "8.10.0",
+    "@wdio/spec-reporter": "8.10.0",
+    "@wdio/types": "8.10.0",
     "axios": "^1.3.5",
     "cross-env": "^7.0.3",
     "c8": "7.13.0",
@@ -105,6 +105,6 @@
     "mocha-testdata": "^1.2.0",
     "puppeteer-core": "^19.11.1",
     "start-server-and-test": "^2.0.0",
-    "webdriverio": "8.9.0"
+    "webdriverio": "8.10.0"
   }
 }
