fix(webdriverio): aligned CJS and ESM exports to offer a consistent developer experience

--- a/integration/webdriverio-jasmine/tsconfig.json
+++ b/integration/webdriverio-jasmine/tsconfig.json
@@ -1,12 +1,12 @@
 {
-  "extends": "../../tsconfig.options.json",  
+  "extends": "../../tsconfig.options.json",
   "compilerOptions": {
+    "target": "es2019",
     "lib": ["es2019", "dom"],
     "types": [
       "node",
-      "webdriverio/async",
-      "chai-as-promised"
-    ]
+      "@wdio/globals/types",
+    ],
   },
 
   "include": [
