--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -23,7 +23,7 @@
       {
         "types": "./esm/index.d.ts",
         "import": "./esm/index.js",
-        "require": "./lib/api.js"
+        "require": "./lib/index.js"
       },
       "./lib/index.js"
     ],
