--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -206,7 +206,7 @@ jobs:
       node-version: 18.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
-      command: 'tree -df && make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
+      command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
       upload-artifact-name: 'test-integration-coverage-reports'
       upload-artifact-path: 'package.json "integration/*/target/**/*"'
 
