docs(website): removed duplicate imports
as suggested by @christian-bromann in webdriverio/webdriverio#10356

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -79,10 +79,11 @@ rules:
         - CLI
         - CSS
         - DTO
-        - GAV
         - FS
+        - GAV
         - HTTP
         - JSON
+        - MDX
         - UI
         - WebdriverIO
   unicorn/import-style:
