fix(jasmine): support for Jasmine 5
requires jasmine/jasmine-npm#199

--- a/packages/jasmine/tsconfig-cjs.build.json
+++ b/packages/jasmine/tsconfig-cjs.build.json
@@ -1,16 +1,18 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "module": "Node16",
+    "module": "CommonJS",
     "moduleResolution": "Node16",
-    "esModuleInterop": true,
+    "outDir": "lib",
+    "rootDir": "src",
     "target": "es2021",
     "lib": [
       "es2021",
       "dom"
     ],
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ]
 }
-
-
