--- a/packages/jasmine/package.json
+++ b/packages/jasmine/package.json
@@ -15,8 +15,21 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "type": "module",
+  "module": "./esm/index.js",
+  "exports": {
+    ".": [
+      {
+        "types": "./esm/index.d.ts",
+        "import": "./esm/index.js",
+        "require": "./lib/index.js"
+      },
+      "./lib/index.js"
+    ],
+    "./package.json": "./package.json"
+  },
   "keywords": [
     "serenity-js",
     "jasmine",
@@ -28,8 +41,12 @@
   "scripts": {
     "clean": "rimraf target",
     "test": "c8 npm run test:no-coverage",
-    "test:no-coverage": "mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
-    "compile": "rimraf lib && tsc --project tsconfig.build.json"
+    "test:no-coverage": "mocha --config .mocharc.yml 'spec/**/*.spec.*'",
+    "compile": "npm run compile:clean && npm run compile:esm && npm run compile:cjs && npm run compile:cjs-package",
+    "compile:clean": "rimraf lib esm",
+    "compile:esm": "tsc --project tsconfig-esm.build.json",
+    "compile:cjs": "tsc --project tsconfig-cjs.build.json",
+    "compile:cjs-package": "node -e \"require('fs').writeFileSync('lib/package.json', '{ \\\"type\\\": \\\"commonjs\\\" }')\""
   },
   "repository": {
     "type": "git",
@@ -40,20 +57,20 @@
     "url": "https://github.com/serenity-js/serenity-js/issues"
   },
   "engines": {
-    "node": "^16.13 || ^18.12 || ^20"
+    "node": "^18.12 || ^20"
   },
   "dependencies": {
     "@serenity-js/core": "3.4.0"
   },
   "peerDependencies": {
-    "jasmine": "^3.99.0"
+    "jasmine": "^5.0.2"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "c8": "7.14.0",
-    "jasmine": "^3.99.0",
+    "jasmine": "^5.0.2",
     "mocha": "^10.2.0",
     "mocha-multi": "^1.1.7",
     "ts-node": "^10.9.1",
