feat(playwright-test): introducing Component Testing with Serenity/JS and Playwright Test
It's now possible to use Serenity/JS reporting capabilities and Serenity/JS Screenplay Pattern APIs
to write UI Component Tests

Related tickets: #1784

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -139,6 +139,7 @@ jobs:
       modules: |
         [
           "playwright-test",
+          "playwright-test-ct",
           "playwright-web"
         ]
       runs-on: 'ubuntu-latest'
