--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,6 +4,7 @@
     "bin/**/*.ts",
     "packages/**/*.ts",
     "integration/**/*.ts",
+    "integration/**/*.tsx",
     "examples/**/*.ts",
     "documentation/**/*.ts",
     "documentation/**/*.tsx"
