docs(website): optimised GitHub issue templates

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,8 +9,6 @@ body:
       
         If you saw a bug, please provide as much information as possible to help us find it and fix it.
 
-        Use [`code blocks`](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/creating-and-highlighting-code-blocks) to format any logs, terminal output, configuration files, or code samples in your bug report.
-
   - type: textarea
     id: bug-description
     attributes:
@@ -70,7 +68,7 @@ body:
         The easier you make it for us to [reproduce the issue](https://serenity-js.org/contributing/#report-an-issue), the more likely we will fix it.
         Please provide a [minimal reproducible example](https://en.wikipedia.org/wiki/Minimal_reproducible_example) using one of the [Serenity/JS project templates](https://github.com/serenity-js?q=template&type=all&language=&sort=).
       placeholder: |
-        Link to your GitHub repository demonstrating the issue
+        Link to your GitHub repository demonstrating the issue: ...
         
         Steps to reproduce:
         - ...
