Corrected feature_request.yml

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -41,6 +41,8 @@ body:
         
         Would you like to:
       options:
-        - label: [work on this yourself](https://serenity-js.org/contributing/#propose-an-enhancement) (with our guidance)
-        - label: [hire the Serenity/JS team](https://github.com/sponsors/serenity-js) to build it for you
-        - label: add it to Serenity/JS backlog and wait for a volunteer
+        - label: |
+          [work on this yourself](https://serenity-js.org/contributing/#propose-an-enhancement) (with our guidance)
+        - label: |
+          [hire the Serenity/JS team](https://github.com/sponsors/serenity-js) to build it for you
+        - label: add it to the Serenity/JS backlog and wait for a volunteer
