--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -39,10 +39,8 @@ body:
       description: |
         We'll need someone to help make your idea happen.
         
-        Would you like to:
+        I would like to:
       options:
-        - label: |
-          [work on this yourself](https://serenity-js.org/contributing/#propose-an-enhancement) (with our guidance)
-        - label: |
-          [hire the Serenity/JS team](https://github.com/sponsors/serenity-js) to build it for you
-        - label: add it to the Serenity/JS backlog and wait for a volunteer
+        - label: "[work on this myself](https://serenity-js.org/contributing/#propose-an-enhancement) (with Serenity/JS team guidance)"
+        - label: "[hire the Serenity/JS team](https://github.com/sponsors/serenity-js) to build it for me"
+        - label: "add it to the Serenity/JS backlog and wait for a volunteer"
