test(webdriverio): added test dependency on devtools as it's no longer installed by webdriverio
Related tickets: re webdriverio/webdriverio#10841

--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -57,6 +57,7 @@
     "chromedriver": "^114.0.3",
     "ci-info": "^3.8.0",
     "cross-env": "^7.0.3",
+    "devtools": "8.13.13",
     "mocha": "^10.2.0",
     "npm-failsafe": "^1.0.0",
     "wdio-chromedriver-service": "8.1.1",
