chore(renovate): update 'devtools' with other WebdriverIO dependencies

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -86,6 +86,7 @@
       "packagePatterns": [
         "^@wdio",
         "^webdriverio",
+        "devtools",
         "puppeteer-core"
       ]
     },
