ci(github): optimised gitpod prebuilds

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -47,9 +47,9 @@ vscode:
 github:
   prebuilds:
     master: true
-    branches: true
+    branches: false
     pullRequests: true
-    pullRequestsFromForks: true
-    addCheck: prevent-merge-on-error
+    pullRequestsFromForks: false
+    addCheck: true
     addComment: false
     addBadge: true
