fix(core): use module: es2020 instead of Node16 to avoid issue nrwl/nx#18801

--- a/packages/webdriverio/tsconfig-cjs.build.json
+++ b/packages/webdriverio/tsconfig-cjs.build.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "Node16",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "outDir": "lib",
     "rootDir": "src",
     "target": "es2021",
