--- a/packages/webdriverio/tsconfig-esm.build.json
+++ b/packages/webdriverio/tsconfig-esm.build.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "outDir": "esm",
     "rootDir": "src",
     "target": "es2021",
