--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -4,7 +4,7 @@
     "lib": [
       "es2021"
     ],
-    "module": "commonjs",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
