fix(webdriverio): use Node16 module loader

--- a/packages/webdriverio/tsconfig-cjs.build.json
+++ b/packages/webdriverio/tsconfig-cjs.build.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "module": "ES2020",
-    "moduleResolution": "node",
+    "module": "CommonJS",
+    "moduleResolution": "Node16",
     "outDir": "lib",
     "rootDir": "src",
     "target": "es2021",
