feat(rest): automatic proxy server configuration for CallAnApi
Configuring Axios to handle proxy servers can be quite a challenge, so Serenity/JS will now do this
automatically for you

Related tickets: closes #1949

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -197,6 +197,7 @@ jobs:
           "cucumber-9",
           "jasmine",
           "mocha",
+          "rest",
           "webdriverio-test-runners",
           "webdriverio-web-devtools",
           "webdriverio-web-webdriver",
