--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -46,7 +46,12 @@
   },
   "dependencies": {
     "@serenity-js/core": "3.10.4",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "agent-base": "^7.1.0",
+    "http-proxy-agent": "^7.0.0",
+    "https-proxy-agent": "^7.0.2",
+    "lru-cache": "^10.0.1",
+    "proxy-from-env": "^1.1.0"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
