feat(web): ability to CallAnApi is now available by default
Serenity/JS Playwright, WebdriverIO, and Protractor integrations now come with the ability to
CallAnApi available by default to all actors

Related tickets: closes #1876

--- a/integration/playwright-web/package.json
+++ b/integration/playwright-web/package.json
@@ -43,6 +43,7 @@
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
     "@serenity-js/playwright": "^3.0.0",
+    "@serenity-js/rest": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
     "@serenity-js/web": "^3.0.0",
     "@types/mocha": "^10.0.1",
