--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@serenity-js/core": "3.10.4",
+    "@serenity-js/rest": "3.10.4",
     "@serenity-js/web": "3.10.4",
     "@wdio/reporter": "8.16.12",
     "deepmerge": "^4.3.1",
